集成登录鉴权与智能对话工作台联调